--- a/css/style.css
+++ b/css/style.css
@@ -51,11 +51,50 @@
     font-weight:300;
     font-size:0.5rem;
 }
-.content{
+.content-blog{
     width: 100%;
-    height: 15rem;
-    border: solid 1px red;
-    z-index: 1;
+    height: 20rem;
+}
+.content-about{
+    width: 100%;
+    height: 17rem;
+}
+.content-contact{
+    width: 100%;
+    height: 8rem;
+}
+.content-info{
+    padding-top:1.5rem;
+    height: 5rem;
+    text-align: center;
+    line-height: 5rem;
+    font-family:"微软雅黑","黑体","宋体";
+    font-size: 0.5rem;
+}
+/* Back top */
+.go-top {
+    background-color: #222;
+    bottom: 0.6rem;
+    right: 1.2rem;
+    color: #ffffff;
+    font-size: 0.5rem;
+    display: none;
+    position: fixed;
+    width: 1rem;
+    height: 1rem;
+    line-height: 1rem;
+    text-align: center;
+    transition: all 0.4s ease-in-out;
+    cursor:pointer
+}
+.go-top:hover {
+    text-decoration: none;
+    background: #E0E0E0;
+    color: #ffffff;
+}
+canvas{
+    width: 2.5rem;
+    height: 2rem;
 }
 .footer{
     text-align: center;
@@ -86,6 +125,20 @@
     }
     .header-banner-info h1{
         margin-top: 0.2rem;
+    }
+    .go-top {
+        background-color: #FF7F50;
+    }
+    .content-about{
+        height: 11rem;
+    }
+    .content-contact{
+        height: 4.5rem;
+    }
+    .content-info{
+        height: 2rem;
+        line-height: 2rem;
+        font-size: 5px;
     }
     .footer{
         padding:0.4rem 0;
