--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,7 @@ canvas{
     .content-info{
         height: 2rem;
         line-height: 2rem;
-        font-size: 5px;
+        font-size: 0.34rem;
     }
     .footer{
         padding:0.4rem 0;
