--- a/css/style.css
+++ b/css/style.css
@@ -53,23 +53,31 @@
 }
 .content-blog{
     width: 100%;
-    height: 20rem;
+    /*height: 20rem;*/
 }
 .content-about{
     width: 100%;
-    height: 17rem;
+    /*height: 20rem;*/
 }
 .content-contact{
     width: 100%;
-    height: 8rem;
+    /*height: 8rem;*/
 }
 .content-info{
-    padding-top:1.5rem;
-    height: 5rem;
+    padding-top:1rem;
+    height: 2rem;
     text-align: center;
-    line-height: 5rem;
+    line-height: 2rem;
     font-family:"微软雅黑","黑体","宋体";
     font-size: 0.5rem;
+}
+.content-info2{
+    padding-top:0.5rem;
+    height: 2.8rem;
+    text-align: center;
+    line-height: 2.8rem;
+    font-family:"微软雅黑","黑体","宋体";
+    font-size: 0.3rem;
 }
 /* Back top */
 .go-top {
@@ -130,14 +138,14 @@ canvas{
         background-color: #FF7F50;
     }
     .content-about{
-        height: 11rem;
+        /*height: 15rem;*/
     }
     .content-contact{
-        height: 4.5rem;
+        /*height: 4.5rem;*/
     }
     .content-info{
-        height: 2rem;
-        line-height: 2rem;
+        height: 1.5rem;
+        line-height: 1.5rem;
         font-size: 0.3rem;
     }
     .footer{
