--- a/css/style.css
+++ b/css/style.css
@@ -100,9 +100,28 @@
     background: #E0E0E0;
     color: #ffffff;
 }
-canvas{
-    width: 2.5rem;
-    height: 2rem;
+.list{
+    margin: 0px 6rem 0.3rem;
+    width: 13rem;
+}
+.list ul{
+    margin: 0px;
+    padding: 0px;
+}
+.list li{
+    width: 100%;
+}
+.list li a{
+    color: #777777;
+    display: block;
+    padding: 6px 0px 4px 15px;
+}
+.list li span{
+    float: right;/*使span元素浮动到右面*/
+    text-align: right;/*日期右对齐*/
+}
+.list li a:hover{
+    color: #336699;
 }
 .footer{
     text-align: center;
@@ -148,8 +167,39 @@ canvas{
         line-height: 1.5rem;
         font-size: 0.3rem;
     }
+    .list{
+        margin: 0px 0rem 0.3rem;
+        width: 10rem;
+    }
     .footer{
         padding:0.4rem 0;
         background: url("../img/banner1.png") bottom no-repeat;
     }
 }
+
+/*****文章部分******************************************************************************************************************************************************/
+
+.session{
+    padding-top:9.5rem;
+    height: 2rem;
+    text-align: center;
+    line-height: 2rem;
+    font-family:"微软雅黑","黑体","宋体";
+    font-size: 0.5rem;
+}
+.session-code{
+    padding-top: 2rem;
+}
+@media only screen and (min-width: 320px) and (max-width: 780px){
+    .session{
+        padding-top:7rem;
+        font-size: 0.4rem;
+    }
+    .session-code{
+        padding-top: 1.2rem;
+    }
+    .session-code pre{
+        font-size: 0.2rem;
+    }
+}
+/******************************************************************************************************************************************************************/
