--- a/css/style.css
+++ b/css/style.css
@@ -180,23 +180,16 @@
 /*****文章部分******************************************************************************************************************************************************/
 
 .session{
-    padding-top:9.5rem;
-    height: 2rem;
     text-align: center;
-    line-height: 2rem;
+    margin-top: 10rem;
     font-family:"微软雅黑","黑体","宋体";
     font-size: 0.5rem;
 }
-.session-code{
-    padding-top: 2rem;
-}
+
 @media only screen and (min-width: 320px) and (max-width: 780px){
     .session{
-        padding-top:4rem;
+        margin-top: 7.5rem;
         font-size: 0.4rem;
-    }
-    .session-code{
-        padding-top: 1.2rem;
     }
     .session-code pre{
         font-size: 0.2rem;
